style.css
body,html {
    margin: 0;
    padding: 0;
    user-select: none;
}

* {
    box-sizing: border-box;
}

body {
    background-color: rgb(129, 129, 129);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100vh;
    font-family: Arial, Helvetica, sans-serif;
}

#container {
    position: relative;

    height: 650px;
    margin-top: 40px;
    margin-bottom: 20px;
    background-color: rgb(28, 27, 32);
    border-top-right-radius: 50% 1%;
    border-top-left-radius: 50% 1%;
    border-bottom-right-radius: 50% 5%;
    border-bottom-left-radius: 50% 5%;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

#ui-bar {
    position: relative;
    margin-top: 20px;
    height: 50px;
    width: 100%;

    display: flex;
    gap: 30px;
    padding: 5px 25px;
}

.ui-help, .ui-about {
    width: calc(100% - 20px);
    height: 520px;
    position: absolute;
    left: 10px;
    top: 70px;
    background-color: black;
    color: white;
    border: 3px solid rgb(75, 75, 75);
    border-radius: 4px;

    padding: 10px;
}

.ui-help > div, .ui-about > div {
    height: 100%;
    overflow: auto;
    font-size: 14px;
    padding: 5px;
    line-height: 1.4em;
}

.ui-help li, .ui-about li {
    padding-top: 8px;
}

.ui-hidden, #buttons-basic.ui-hidden, #buttons-expanded.ui-hidden {
    display: none;
}

#copied-feedback {
    position: absolute;
    top: 115px;
    left: 140px;

    color: yellow;
    opacity: 0;
    font-weight: bold;

    animation-duration: .8s;
    animation-timing-function: linear;
}

#display {
    width: 360px;
    height: 50px;
    background-color: #d9e6d9;
    border-radius: 5px;

    font-family: monospace;
    font-size: 30px;

    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 10px;

    line-height: 8px;
}

#display.error-msg {
    font-size: 8px;
}

#buttons-basic {
    width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 25px;
}

#buttons-expanded {
    display: flex;
    width: 800px;
    flex-direction: column;
    justify-content: center;
    gap: 25px;
}

#buttons-expanded > .top-row {
    display: flex;
    gap: 20px;
    justify-content: center;
}

#buttons-expanded > .digit-row {
    margin: 15px;
    display: flex;
    flex-direction: row;
    gap: 15px;
    flex-wrap: wrap;
    justify-content: flex-start;
}

.row {
    flex-basis: 90%;
    display: flex;
    flex-direction: row;
    gap: 25px;
}

.button, .ui-button {
    border: 2px solid white;
    border-radius: 15px;
    color: white;
    font-weight: bold;

    box-shadow: white 0 4px;

    display: flex;
    justify-content: center;
    align-items: center;

    transition: transform .1s linear, box-shadow .1s linear, background-color .1s linear;
}

.ui-button {
    flex-basis: 80px;
    height: 50px;
    background: rgb(49, 49, 49);
}

.ui-button.button-expand {
    margin-left: auto;

}

.ui-button.button-expand.expanded {
    margin-left: 250px;
}

.top-row {
    padding: 0 30px;
}

.top-row > .button-backspace {
    margin-right: auto;
}


.button {
    background-color: rgb(0, 0, 0);
    width: 60px;
    height: 60px;
    font-size: 24px;
}
.digit-button {
    width: 50px;
    height: 50px;
    font-size: 18px;
    border-width: 1px;
}

.button:hover, .ui-button:hover {
    cursor:pointer;
}

.button:active, .ui-button:active {
    box-shadow: white 0 0;
    transform: translate(0, 4px);

}

.base-input {
    height: 50px;
    width: 100px;
    font-size: 18px;
    padding: 4px;
    margin: auto;
    background-color: black;
    color: white;
    text-align: right;
    border: 3px double white;
}

.base-input-label {
    color: white;
    font-weight: 500;
    padding-right: 10px;
}

a {
    color: lightblue;
}

.footer {
    flex-basis: 1em;
    background-color: #11294b;
    color: #e5e7eb;
    text-align: center;
    padding: 28px;
    align-self: stretch;
}

@keyframes copied-feedback {
    0% {opacity: 100%;}

    100% {opacity: 0;}
}

